Added the injuries to the MLB table

--- a/Code/projects/mlb_analyzer/sandbox/teams.ipynb
+++ b/Code/projects/mlb_analyzer/sandbox/teams.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "05e133bb",
    "metadata": {},
    "outputs": [],
@@ -38,19 +38,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing data for date: 2025-05-08\n",
+      "Processing data for date: 2025-05-22\n",
       "grid-noGutter mb-15 table loaded successfully.\n",
-      "Processing data for date: 2025-05-07\n",
+      "Processing data for date: 2025-05-21\n",
       "grid-noGutter mb-15 table loaded successfully.\n",
-      "Processing data for date: 2025-05-06\n",
+      "Processing data for date: 2025-05-20\n",
       "grid-noGutter mb-15 table loaded successfully.\n",
-      "Processing data for date: 2025-05-05\n",
+      "Processing data for date: 2025-05-19\n",
       "grid-noGutter mb-15 table loaded successfully.\n",
-      "Processing data for date: 2025-05-04\n",
+      "Processing data for date: 2025-05-18\n",
       "grid-noGutter mb-15 table loaded successfully.\n",
-      "Processing data for date: 2025-05-03\n",
+      "Processing data for date: 2025-05-17\n",
       "grid-noGutter mb-15 table loaded successfully.\n",
-      "Processing data for date: 2025-05-02\n",
+      "Processing data for date: 2025-05-16\n",
       "grid-noGutter mb-15 table loaded successfully.\n"
      ]
     }
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "id": "76b1deac",
    "metadata": {},
    "outputs": [
@@ -985,34 +985,57 @@
       "pitching data successfully retrieved for team 158\n",
       "pitching data successfully retrieved for team 138\n",
       "pitching data successfully retrieved for team 112\n",
-      "Skipping team 109 due to error: Message: \n",
-      "Stacktrace:\n",
-      "\tGetHandleVerifier [0x00007FF7A9EFCF25+75717]\n",
-      "\tGetHandleVerifier [0x00007FF7A9EFCF80+75808]\n",
-      "\t(No symbol) [0x00007FF7A9CC8F9A]\n",
-      "\t(No symbol) [0x00007FF7A9D1F4C6]\n",
-      "\t(No symbol) [0x00007FF7A9D1F77C]\n",
-      "\t(No symbol) [0x00007FF7A9D72577]\n",
-      "\t(No symbol) [0x00007FF7A9D473BF]\n",
-      "\t(No symbol) [0x00007FF7A9D6F39C]\n",
-      "\t(No symbol) [0x00007FF7A9D47153]\n",
-      "\t(No symbol) [0x00007FF7A9D10421]\n",
-      "\t(No symbol) [0x00007FF7A9D111B3]\n",
-      "\tGetHandleVerifier [0x00007FF7AA1FD6FD+3223453]\n",
-      "\tGetHandleVerifier [0x00007FF7AA1F7CA2+3200322]\n",
-      "\tGetHandleVerifier [0x00007FF7AA215AD3+3322739]\n",
-      "\tGetHandleVerifier [0x00007FF7A9F169FA+180890]\n",
-      "\tGetHandleVerifier [0x00007FF7A9F1E0FF+211359]\n",
-      "\tGetHandleVerifier [0x00007FF7A9F05274+109332]\n",
-      "\tGetHandleVerifier [0x00007FF7A9F05422+109762]\n",
-      "\tGetHandleVerifier [0x00007FF7A9EEBA39+4825]\n",
-      "\tBaseThreadInitThunk [0x00007FFFA6BB7374+20]\n",
-      "\tRtlUserThreadStart [0x00007FFFA889CC91+33]\n",
-      "\n",
+      "pitching data successfully retrieved for team 109\n",
       "pitching data successfully retrieved for team 119\n",
-      "pitching data successfully retrieved for team 137\n",
+      "Skipping team 137 due to error: Message: \n",
+      "Stacktrace:\n",
+      "\tGetHandleVerifier [0x00007FF6E10ACF45+75717]\n",
+      "\tGetHandleVerifier [0x00007FF6E10ACFA0+75808]\n",
+      "\t(No symbol) [0x00007FF6E0E78F9A]\n",
+      "\t(No symbol) [0x00007FF6E0ECF4C6]\n",
+      "\t(No symbol) [0x00007FF6E0ECF77C]\n",
+      "\t(No symbol) [0x00007FF6E0F22577]\n",
+      "\t(No symbol) [0x00007FF6E0EF73BF]\n",
+      "\t(No symbol) [0x00007FF6E0F1F39C]\n",
+      "\t(No symbol) [0x00007FF6E0EF7153]\n",
+      "\t(No symbol) [0x00007FF6E0EC0421]\n",
+      "\t(No symbol) [0x00007FF6E0EC11B3]\n",
+      "\tGetHandleVerifier [0x00007FF6E13AD71D+3223453]\n",
+      "\tGetHandleVerifier [0x00007FF6E13A7CC2+3200322]\n",
+      "\tGetHandleVerifier [0x00007FF6E13C5AF3+3322739]\n",
+      "\tGetHandleVerifier [0x00007FF6E10C6A1A+180890]\n",
+      "\tGetHandleVerifier [0x00007FF6E10CE11F+211359]\n",
+      "\tGetHandleVerifier [0x00007FF6E10B5294+109332]\n",
+      "\tGetHandleVerifier [0x00007FF6E10B5442+109762]\n",
+      "\tGetHandleVerifier [0x00007FF6E109BA59+4825]\n",
+      "\tBaseThreadInitThunk [0x00007FFCE0127374+20]\n",
+      "\tRtlUserThreadStart [0x00007FFCE0A1CC91+33]\n",
+      "\n",
       "pitching data successfully retrieved for team 114\n",
-      "pitching data successfully retrieved for team 137\n",
+      "Skipping team 137 due to error: Message: \n",
+      "Stacktrace:\n",
+      "\tGetHandleVerifier [0x00007FF6E10ACF45+75717]\n",
+      "\tGetHandleVerifier [0x00007FF6E10ACFA0+75808]\n",
+      "\t(No symbol) [0x00007FF6E0E78F9A]\n",
+      "\t(No symbol) [0x00007FF6E0ECF4C6]\n",
+      "\t(No symbol) [0x00007FF6E0ECF77C]\n",
+      "\t(No symbol) [0x00007FF6E0F22577]\n",
+      "\t(No symbol) [0x00007FF6E0EF73BF]\n",
+      "\t(No symbol) [0x00007FF6E0F1F39C]\n",
+      "\t(No symbol) [0x00007FF6E0EF7153]\n",
+      "\t(No symbol) [0x00007FF6E0EC0421]\n",
+      "\t(No symbol) [0x00007FF6E0EC11B3]\n",
+      "\tGetHandleVerifier [0x00007FF6E13AD71D+3223453]\n",
+      "\tGetHandleVerifier [0x00007FF6E13A7CC2+3200322]\n",
+      "\tGetHandleVerifier [0x00007FF6E13C5AF3+3322739]\n",
+      "\tGetHandleVerifier [0x00007FF6E10C6A1A+180890]\n",
+      "\tGetHandleVerifier [0x00007FF6E10CE11F+211359]\n",
+      "\tGetHandleVerifier [0x00007FF6E10B5294+109332]\n",
+      "\tGetHandleVerifier [0x00007FF6E10B5442+109762]\n",
+      "\tGetHandleVerifier [0x00007FF6E109BA59+4825]\n",
+      "\tBaseThreadInitThunk [0x00007FFCE0127374+20]\n",
+      "\tRtlUserThreadStart [0x00007FFCE0A1CC91+33]\n",
+      "\n",
       "pitching data successfully retrieved for team 114\n",
       "pitching data successfully retrieved for team 136\n",
       "pitching data successfully retrieved for team 146\n",
@@ -1203,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "id": "c37ce2ce",
    "metadata": {},
    "outputs": [],
@@ -1418,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "id": "c50a2fa6",
    "metadata": {},
    "outputs": [],
@@ -1490,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "a001f3e9",
    "metadata": {},
    "outputs": [],
@@ -1527,16 +1550,7 @@
     "    statcast_data_hitting[team_id]            = statcast\n",
     "    plate_discipline_data_hitting[team_id]    = plate_discipline\n",
     "    batted_ball_profile_data_hitting[team_id] = batted_ball_profile\n",
-    "    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "5ce2bd8f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    \n",
     "\n",
     "#! GAMELOGS\n",
     "# Initialize dictionaries to store the results for each team\n",
@@ -1559,16 +1573,7 @@
     "    gamelogs = process_gamelogs(df)\n",
     "    \n",
     "    # Store the results in the respective dictionaries\n",
-    "    gamelog_hitting[team_id] = gamelogs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "22d58658",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    gamelog_hitting[team_id] = gamelogs\n",
     "def create_parquet_files(data_dict, suffix):\n",
     "    \"\"\"Create Parquet files from a dictionary of DataFrames, ensuring uniform column names.\"\"\"\n",
     "    \n",
@@ -1623,16 +1628,8 @@
     "batted_ball_profile_pitching_df = merge_dataframes(batted_ball_profile_data_pitching)\n",
     "\n",
     "gamelog_hitting_df = merge_dataframes(gamelog_hitting)\n",
-    "gamelog_pitching_df = merge_dataframes(gamelog_pitching)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "a523f018",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "gamelog_pitching_df = merge_dataframes(gamelog_pitching)\n",
+    "\n",
     "\n",
     "# Create a column with type of analysis\n",
     "statcast_hitting_df['type']  = 'hitting'\n",
@@ -1683,10 +1680,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "eba80d8a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "split1 (LHP) table loaded successfully.\n",
+      "split1 (RHP) table loaded successfully.\n",
+      "split1 (LH) table loaded successfully.\n",
+      "split1 (RH) table loaded successfully.\n",
+      "split1 (7) table loaded successfully.\n",
+      "split1 (14) table loaded successfully.\n",
+      "split1 (28) table loaded successfully.\n",
+      "split1 (Home) table loaded successfully.\n",
+      "split1 (Away) table loaded successfully.\n",
+      "split1 (first_batter_game) table loaded successfully.\n",
+      "split1 (vs_power_pitcher) table loaded successfully.\n",
+      "split1 (vs_weak_pitcher) table loaded successfully.\n",
+      "split1 (vs_greater_or_equal_than_500_WP) table loaded successfully.\n",
+      "split1 (vs_less_than_500_WP) table loaded successfully.\n",
+      "split1 (ANA) table loaded successfully.\n",
+      "split1 (ARI) table loaded successfully.\n",
+      "split1 (ATL) table loaded successfully.\n",
+      "split1 (BAL) table loaded successfully.\n",
+      "split1 (BOS) table loaded successfully.\n",
+      "split1 (CHC) table loaded successfully.\n",
+      "split1 (CHW) table loaded successfully.\n",
+      "split1 (CIN) table loaded successfully.\n",
+      "split1 (CLE) table loaded successfully.\n",
+      "split1 (COL) table loaded successfully.\n",
+      "split1 (DET) table loaded successfully.\n",
+      "split1 (HOU) table loaded successfully.\n",
+      "split1 (KCR) table loaded successfully.\n",
+      "split1 (LAD) table loaded successfully.\n",
+      "split1 (FLA) table loaded successfully.\n",
+      "split1 (MIL) table loaded successfully.\n",
+      "split1 (MIN) table loaded successfully.\n",
+      "split1 (NYM) table loaded successfully.\n",
+      "split1 (NYY) table loaded successfully.\n",
+      "split1 (OAK) table loaded successfully.\n",
+      "split1 (PHI) table loaded successfully.\n",
+      "split1 (PIT) table loaded successfully.\n",
+      "split1 (SDP) table loaded successfully.\n",
+      "split1 (SEA) table loaded successfully.\n",
+      "split1 (SFG) table loaded successfully.\n",
+      "split1 (STL) table loaded successfully.\n",
+      "split1 (TBD) table loaded successfully.\n",
+      "split1 (TEX) table loaded successfully.\n",
+      "split1 (TOR) table loaded successfully.\n",
+      "split1 (WSN) table loaded successfully.\n"
+     ]
+    }
+   ],
    "source": [
     "def teams_split(split_type, clean_mode):\n",
     "    # Load the options\n",
@@ -1955,10 +2003,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "5f1798cc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "expanded_standings_overall table loaded successfully.\n"
+     ]
+    }
+   ],
    "source": [
     "def import_standings():\n",
     "    # Load the options\n",
@@ -2050,7 +2106,160 @@
    "id": "0001f869",
    "metadata": {},
    "source": [
-    "### Import Odds"
+    "### Import Injuries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a609862b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Page-colMain table loaded successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def import_injuries():\n",
+    "    # Load the options\n",
+    "    options = Options()\n",
+    "    options.add_argument(\"--headless\")  # Optional: Run in headless mode\n",
+    "    options.binary_location = \"C:\\\\Program Files\\\\BraveSoftware\\\\Brave-Browser\\\\Application\\\\brave.exe\"\n",
+    "\n",
+    "    today = datetime.now().strftime('%Y-%m-%d')\n",
+    "\n",
+    "    # Set up the WebDriver\n",
+    "    driver = webdriver.Chrome(options= options)    \n",
+    "    driver.get(f\"https://www.cbssports.com/mlb/injuries/\")\n",
+    "\n",
+    "    datatable_id = 'Page-colMain'\n",
+    "\n",
+    "    # Explicitly wait for the table element to load\n",
+    "    datatable_xpath = f\"//div[@class='{datatable_id}']\"  # Update XPATH as needed\n",
+    "    try:\n",
+    "        WebDriverWait(driver, 60).until(\n",
+    "            EC.presence_of_element_located((By.XPATH, datatable_xpath))\n",
+    "        )\n",
+    "        print(f\"{datatable_id} table loaded successfully.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error: Table {datatable_id} did not load. Details: {e}\")\n",
+    "        driver.quit()\n",
+    "\n",
+    "    # Wait for the load of the page\n",
+    "    time.sleep(10)\n",
+    "\n",
+    "    # Locate the table\n",
+    "    table_element = driver.find_element(By.XPATH, datatable_xpath)\n",
+    "    text_content = table_element.text\n",
+    "\n",
+    "    # Process the table content\n",
+    "    rows = text_content.split(\"\\n\")\n",
+    "    table_data = [row.split(\"\\t\") for row in rows]\n",
+    "\n",
+    "    # Convert to dataframe\n",
+    "    df = pd.DataFrame(table_data)\n",
+    "    \n",
+    "    # Remove rows where the column value is exactly the given string\n",
+    "    df = df[df[0] != \"PLAYER POSITION UPDATED INJURY INJURY STATUS\"]\n",
+    "\n",
+    "    return df\n",
+    "\n",
+    "# Call the function\n",
+    "injuries_df = import_injuries()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92015a09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\adtpi\\AppData\\Local\\Temp\\ipykernel_31228\\789161113.py:59: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  .fillna(status_parsed['Expected_Return_Date_2'].infer_objects(copy=False)) \\\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def process_injury_data(df_raw_column):\n",
+    "    # Ensure raw_series is a Series regardless of input type\n",
+    "    if isinstance(df_raw_column, pd.DataFrame):\n",
+    "        if len(df_raw_column.columns) > 1:\n",
+    "            raise ValueError(\"Input DataFrame must have only one column for processing.\")\n",
+    "        raw_series = df_raw_column.iloc[:, 0]\n",
+    "    else:\n",
+    "        raw_series = df_raw_column\n",
+    "\n",
+    "    # 1. Identify Team Rows and Fill Down\n",
+    "    df_temp = pd.DataFrame({'Original_Data': raw_series})\n",
+    "    df_temp['Team'] = df_temp['Original_Data'].apply(\n",
+    "        lambda x: str(x) if not re.search(r'\\d{1,2}\\s[A-Za-z]{3}', str(x)) and ',' not in str(x) else None\n",
+    "    )\n",
+    "    df_temp['Team'] = df_temp['Team'].ffill().infer_objects(copy=False)\n",
+    "\n",
+    "    # 2. Filter out Team Rows (keep only player injury rows)\n",
+    "    df_players = df_temp[\n",
+    "        df_temp['Original_Data'].apply(\n",
+    "            lambda x: re.search(r'\\d{1,2}\\s[A-Za-z]{3}', str(x)) is not None or ',' in str(x)\n",
+    "        )\n",
+    "    ].copy()\n",
+    "    \n",
+    "    pos_list = 'SP|RP|C|1B|2B|3B|SS|OF|DH|P|UT|LHP|RHP|CL|MR|LF|RF|CF|OF/1B|2B/SS|3B/SS|C/1B|P/OF|INF|SS/2B|3B/1B|1B/OF|P/1B'\n",
+    "\n",
+    "    # 3. Parse the Player Injury String\n",
+    "    pattern = re.compile(\n",
+    "        r'^(?P<Name>[A-Z][A-Za-z .\\'\\-]+?)\\s+'\n",
+    "        r'(?P<Pos>(?:' + pos_list + r')\\b)\\s*'\n",
+    "        r'(?P<ReportDate>[A-Z][a-z]{2},\\s[A-Z][a-z]{2}\\s\\d{1,2})\\s*'\n",
+    "        r'(?P<InjuryDetails>.*)$'\n",
+    "    )\n",
+    "\n",
+    "    extracted_data = df_players['Original_Data'].str.extract(pattern)\n",
+    "    \n",
+    "    df_final = pd.concat([df_players[['Team']], extracted_data], axis=1)\n",
+    "\n",
+    "    df_final = df_final.dropna(subset=['Name'])\n",
+    "\n",
+    "    df_final['Injury_Status_Full'] = df_final['InjuryDetails'].fillna('').infer_objects(copy=False)\n",
+    "\n",
+    "    status_pattern = re.compile(\n",
+    "        r'^(?P<Injury>.*?)\\s*'\n",
+    "        r'(?:Expected to be out until at least\\s(?P<Expected_Return_Date>[A-Z][a-z]{2}\\s\\d{1,2}))?'\n",
+    "        r'(?:Expected to be out until\\s(?P<Expected_Return_Date_2>[A-Z][a-z]{2}\\s\\d{1,2}))?'\n",
+    "        r'(?:Out for the season|Out for Season|Season-ending|DFA|Released|Suspended|Minor League Rehab|Rehab Assignment|Retired|Transferred to 60-Day IL)\\s*$'\n",
+    "    )\n",
+    "    \n",
+    "    status_parsed = df_final['Injury_Status_Full'].str.extract(status_pattern)\n",
+    "    \n",
+    "    df_final['Injury'] = status_parsed['Injury'].str.strip().fillna('').infer_objects(copy=False)\n",
+    "    \n",
+    "    # *** THIS IS THE LINE WITH THE SPECIFIC FIX ***\n",
+    "    df_final['Expected_Return_Date'] = status_parsed['Expected_Return_Date'] \\\n",
+    "                                    .fillna(status_parsed['Expected_Return_Date_2'].infer_objects(copy=False)) \\\n",
+    "                                    .fillna('') \\\n",
+    "                                    .infer_objects(copy=False) # Keep this one as well for the final result\n",
+    "\n",
+    "    df_final['Status'] = 'Active Injured'\n",
+    "    df_final.loc[df_final['Injury_Status_Full'].str.contains('Out for the season|Season-ending', na=False), 'Status'] = 'Out for Season'\n",
+    "    df_final.loc[df_final['Injury_Status_Full'].str.contains('DFA', na=False), 'Status'] = 'DFA'\n",
+    "    df_final.loc[df_final['Injury_Status_Full'].str.contains('Suspended', na=False), 'Status'] = 'Suspended'\n",
+    "    df_final.loc[df_final['Injury_Status_Full'].str.contains('Rehab Assignment|Minor League Rehab', na=False), 'Status'] = 'Rehab'\n",
+    "    df_final.loc[df_final['Injury_Status_Full'].str.contains('60-Day IL', na=False), 'Status'] = '60-Day IL'\n",
+    "\n",
+    "    df_final = df_final[['Team', 'Name', 'Pos', 'ReportDate', 'Injury', 'Status', 'Expected_Return_Date']]\n",
+    "\n",
+    "    return df_final.copy()\n",
+    "\n",
+    "# Call the function with your raw DataFrame column\n",
+    "processed_injuries_df = process_injury_data(injuries_df[0])"
    ]
   }
  ],
