--- a/Code/projects/mlb_analyzer/sandbox/teams.ipynb
+++ b/Code/projects/mlb_analyzer/sandbox/teams.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "05e133bb",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,8 @@
     "from rapidfuzz import process\n",
     "from datetime import datetime, timedelta\n",
     "import re\n",
-    "import os"
+    "import os\n",
+    "import numpy as np"
    ]
   },
   {
@@ -38,19 +39,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Processing data for date: 2025-05-26\n",
+      "grid-noGutter mb-15 table loaded successfully.\n",
+      "Processing data for date: 2025-05-25\n",
+      "grid-noGutter mb-15 table loaded successfully.\n",
+      "Processing data for date: 2025-05-24\n",
+      "grid-noGutter mb-15 table loaded successfully.\n",
+      "Processing data for date: 2025-05-23\n",
+      "grid-noGutter mb-15 table loaded successfully.\n",
       "Processing data for date: 2025-05-22\n",
       "grid-noGutter mb-15 table loaded successfully.\n",
       "Processing data for date: 2025-05-21\n",
       "grid-noGutter mb-15 table loaded successfully.\n",
       "Processing data for date: 2025-05-20\n",
-      "grid-noGutter mb-15 table loaded successfully.\n",
-      "Processing data for date: 2025-05-19\n",
-      "grid-noGutter mb-15 table loaded successfully.\n",
-      "Processing data for date: 2025-05-18\n",
-      "grid-noGutter mb-15 table loaded successfully.\n",
-      "Processing data for date: 2025-05-17\n",
-      "grid-noGutter mb-15 table loaded successfully.\n",
-      "Processing data for date: 2025-05-16\n",
       "grid-noGutter mb-15 table loaded successfully.\n"
      ]
     }
@@ -980,62 +981,39 @@
       "pitching data successfully retrieved for team 108\n",
       "pitching data successfully retrieved for team 117\n",
       "pitching data successfully retrieved for team 133\n",
-      "pitching data successfully retrieved for team 141\n",
+      "Skipping team 141 due to error: Message: \n",
+      "Stacktrace:\n",
+      "\tGetHandleVerifier [0x00007FF6A853CF45+75717]\n",
+      "\tGetHandleVerifier [0x00007FF6A853CFA0+75808]\n",
+      "\t(No symbol) [0x00007FF6A8308F9A]\n",
+      "\t(No symbol) [0x00007FF6A835F4C6]\n",
+      "\t(No symbol) [0x00007FF6A835F77C]\n",
+      "\t(No symbol) [0x00007FF6A83B2577]\n",
+      "\t(No symbol) [0x00007FF6A83873BF]\n",
+      "\t(No symbol) [0x00007FF6A83AF39C]\n",
+      "\t(No symbol) [0x00007FF6A8387153]\n",
+      "\t(No symbol) [0x00007FF6A8350421]\n",
+      "\t(No symbol) [0x00007FF6A83511B3]\n",
+      "\tGetHandleVerifier [0x00007FF6A883D71D+3223453]\n",
+      "\tGetHandleVerifier [0x00007FF6A8837CC2+3200322]\n",
+      "\tGetHandleVerifier [0x00007FF6A8855AF3+3322739]\n",
+      "\tGetHandleVerifier [0x00007FF6A8556A1A+180890]\n",
+      "\tGetHandleVerifier [0x00007FF6A855E11F+211359]\n",
+      "\tGetHandleVerifier [0x00007FF6A8545294+109332]\n",
+      "\tGetHandleVerifier [0x00007FF6A8545442+109762]\n",
+      "\tGetHandleVerifier [0x00007FF6A852BA59+4825]\n",
+      "\tBaseThreadInitThunk [0x00007FFCE0127374+20]\n",
+      "\tRtlUserThreadStart [0x00007FFCE0A1CC91+33]\n",
+      "\n",
       "pitching data successfully retrieved for team 144\n",
       "pitching data successfully retrieved for team 158\n",
       "pitching data successfully retrieved for team 138\n",
       "pitching data successfully retrieved for team 112\n",
       "pitching data successfully retrieved for team 109\n",
       "pitching data successfully retrieved for team 119\n",
-      "Skipping team 137 due to error: Message: \n",
-      "Stacktrace:\n",
-      "\tGetHandleVerifier [0x00007FF6E10ACF45+75717]\n",
-      "\tGetHandleVerifier [0x00007FF6E10ACFA0+75808]\n",
-      "\t(No symbol) [0x00007FF6E0E78F9A]\n",
-      "\t(No symbol) [0x00007FF6E0ECF4C6]\n",
-      "\t(No symbol) [0x00007FF6E0ECF77C]\n",
-      "\t(No symbol) [0x00007FF6E0F22577]\n",
-      "\t(No symbol) [0x00007FF6E0EF73BF]\n",
-      "\t(No symbol) [0x00007FF6E0F1F39C]\n",
-      "\t(No symbol) [0x00007FF6E0EF7153]\n",
-      "\t(No symbol) [0x00007FF6E0EC0421]\n",
-      "\t(No symbol) [0x00007FF6E0EC11B3]\n",
-      "\tGetHandleVerifier [0x00007FF6E13AD71D+3223453]\n",
-      "\tGetHandleVerifier [0x00007FF6E13A7CC2+3200322]\n",
-      "\tGetHandleVerifier [0x00007FF6E13C5AF3+3322739]\n",
-      "\tGetHandleVerifier [0x00007FF6E10C6A1A+180890]\n",
-      "\tGetHandleVerifier [0x00007FF6E10CE11F+211359]\n",
-      "\tGetHandleVerifier [0x00007FF6E10B5294+109332]\n",
-      "\tGetHandleVerifier [0x00007FF6E10B5442+109762]\n",
-      "\tGetHandleVerifier [0x00007FF6E109BA59+4825]\n",
-      "\tBaseThreadInitThunk [0x00007FFCE0127374+20]\n",
-      "\tRtlUserThreadStart [0x00007FFCE0A1CC91+33]\n",
-      "\n",
+      "pitching data successfully retrieved for team 137\n",
       "pitching data successfully retrieved for team 114\n",
-      "Skipping team 137 due to error: Message: \n",
-      "Stacktrace:\n",
-      "\tGetHandleVerifier [0x00007FF6E10ACF45+75717]\n",
-      "\tGetHandleVerifier [0x00007FF6E10ACFA0+75808]\n",
-      "\t(No symbol) [0x00007FF6E0E78F9A]\n",
-      "\t(No symbol) [0x00007FF6E0ECF4C6]\n",
-      "\t(No symbol) [0x00007FF6E0ECF77C]\n",
-      "\t(No symbol) [0x00007FF6E0F22577]\n",
-      "\t(No symbol) [0x00007FF6E0EF73BF]\n",
-      "\t(No symbol) [0x00007FF6E0F1F39C]\n",
-      "\t(No symbol) [0x00007FF6E0EF7153]\n",
-      "\t(No symbol) [0x00007FF6E0EC0421]\n",
-      "\t(No symbol) [0x00007FF6E0EC11B3]\n",
-      "\tGetHandleVerifier [0x00007FF6E13AD71D+3223453]\n",
-      "\tGetHandleVerifier [0x00007FF6E13A7CC2+3200322]\n",
-      "\tGetHandleVerifier [0x00007FF6E13C5AF3+3322739]\n",
-      "\tGetHandleVerifier [0x00007FF6E10C6A1A+180890]\n",
-      "\tGetHandleVerifier [0x00007FF6E10CE11F+211359]\n",
-      "\tGetHandleVerifier [0x00007FF6E10B5294+109332]\n",
-      "\tGetHandleVerifier [0x00007FF6E10B5442+109762]\n",
-      "\tGetHandleVerifier [0x00007FF6E109BA59+4825]\n",
-      "\tBaseThreadInitThunk [0x00007FFCE0127374+20]\n",
-      "\tRtlUserThreadStart [0x00007FFCE0A1CC91+33]\n",
-      "\n",
+      "pitching data successfully retrieved for team 137\n",
       "pitching data successfully retrieved for team 114\n",
       "pitching data successfully retrieved for team 136\n",
       "pitching data successfully retrieved for team 146\n",
@@ -1136,7 +1114,30 @@
       "hitting gamelogs successfully retrieved for team 136\n",
       "hitting gamelogs successfully retrieved for team 146\n",
       "hitting gamelogs successfully retrieved for team 121\n",
-      "hitting gamelogs successfully retrieved for team 120\n",
+      "Skipping team 120 due to error: Message: \n",
+      "Stacktrace:\n",
+      "\tGetHandleVerifier [0x00007FF6A853CF45+75717]\n",
+      "\tGetHandleVerifier [0x00007FF6A853CFA0+75808]\n",
+      "\t(No symbol) [0x00007FF6A8308F9A]\n",
+      "\t(No symbol) [0x00007FF6A835F4C6]\n",
+      "\t(No symbol) [0x00007FF6A835F77C]\n",
+      "\t(No symbol) [0x00007FF6A83B2577]\n",
+      "\t(No symbol) [0x00007FF6A83873BF]\n",
+      "\t(No symbol) [0x00007FF6A83AF39C]\n",
+      "\t(No symbol) [0x00007FF6A8387153]\n",
+      "\t(No symbol) [0x00007FF6A8350421]\n",
+      "\t(No symbol) [0x00007FF6A83511B3]\n",
+      "\tGetHandleVerifier [0x00007FF6A883D71D+3223453]\n",
+      "\tGetHandleVerifier [0x00007FF6A8837CC2+3200322]\n",
+      "\tGetHandleVerifier [0x00007FF6A8855AF3+3322739]\n",
+      "\tGetHandleVerifier [0x00007FF6A8556A1A+180890]\n",
+      "\tGetHandleVerifier [0x00007FF6A855E11F+211359]\n",
+      "\tGetHandleVerifier [0x00007FF6A8545294+109332]\n",
+      "\tGetHandleVerifier [0x00007FF6A8545442+109762]\n",
+      "\tGetHandleVerifier [0x00007FF6A852BA59+4825]\n",
+      "\tBaseThreadInitThunk [0x00007FFCE0127374+20]\n",
+      "\tRtlUserThreadStart [0x00007FFCE0A1CC91+33]\n",
+      "\n",
       "hitting gamelogs successfully retrieved for team 110\n",
       "hitting gamelogs successfully retrieved for team 135\n",
       "hitting gamelogs successfully retrieved for team 143\n",
@@ -1513,7 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "a001f3e9",
    "metadata": {},
    "outputs": [],
@@ -1680,7 +1681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "eba80d8a",
    "metadata": {},
    "outputs": [
@@ -2003,7 +2004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "5f1798cc",
    "metadata": {},
    "outputs": [
@@ -2111,7 +2112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "a609862b",
    "metadata": {},
    "outputs": [
@@ -2174,7 +2175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "92015a09",
    "metadata": {},
    "outputs": [
@@ -2182,7 +2183,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\adtpi\\AppData\\Local\\Temp\\ipykernel_31228\\789161113.py:59: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\adtpi\\AppData\\Local\\Temp\\ipykernel_34496\\4234402237.py:55: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  .fillna(status_parsed['Expected_Return_Date_2'].infer_objects(copy=False)) \\\n"
      ]
     }
@@ -2259,7 +2260,118 @@
     "    return df_final.copy()\n",
     "\n",
     "# Call the function with your raw DataFrame column\n",
-    "processed_injuries_df = process_injury_data(injuries_df[0])"
+    "processed_injuries_df = process_injury_data(injuries_df[0])\n",
+    "\n",
+    "# Export the table\n",
+    "output_folder_teams = ('D:\\\\mlb_analyzer\\\\output\\\\players\\\\injuries\\\\')\n",
+    "\n",
+    "# Save the dataFrame in the 'output' folder\n",
+    "processed_injuries_df.to_csv(os.path.join(output_folder_teams, 'injuries.csv'), index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca7e5544",
+   "metadata": {},
+   "source": [
+    "### Get information about the park (Park factors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "750bd99b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data-table table loaded successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_park_factors():\n",
+    "    # Load the options\n",
+    "    options = Options()\n",
+    "    options.add_argument(\"--headless\")  # Optional: Run in headless mode\n",
+    "    options.binary_location = \"C:\\\\Program Files\\\\BraveSoftware\\\\Brave-Browser\\\\Application\\\\brave.exe\"\n",
+    "    \n",
+    "    # Set up the WebDriver\n",
+    "    driver = webdriver.Chrome(options= options)\n",
+    "    driver.get(\"https://www.fantasypros.com/mlb/park-factors.php\")\n",
+    "\n",
+    "    datatable_id = 'data-table'\n",
+    "\n",
+    "    # Explicitly wait for the table element to load\n",
+    "    datatable_xpath = f\"//table[@id='{datatable_id}']\"  # Update XPATH as needed\n",
+    "    try:\n",
+    "        WebDriverWait(driver, 60).until(\n",
+    "            EC.presence_of_element_located((By.XPATH, datatable_xpath))\n",
+    "        )\n",
+    "        print(f\"{datatable_id} table loaded successfully.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error: Table {datatable_id} did not load. Details: {e}\")\n",
+    "        driver.quit()\n",
+    "\n",
+    "    # Wait for the load of the page\n",
+    "    time.sleep(10)\n",
+    "\n",
+    "    # Locate the table\n",
+    "    table_element = driver.find_element(By.XPATH, datatable_xpath)\n",
+    "    text_content = table_element.text\n",
+    "\n",
+    "    # Process the table content\n",
+    "    rows = text_content.split(\"\\n\")\n",
+    "    table_data = [row.split(\"\\t\") for row in rows]\n",
+    "\n",
+    "    # Convert to dataframe\n",
+    "    df = pd.DataFrame(table_data)\n",
+    "    \n",
+    "    # Replace empty-looking values with NaN\n",
+    "    df.replace(r'^\\s*$', np.nan, regex=True, inplace=True) \n",
+    "    #df = df.dropna(how= 'all')  # Now remove truly empty rows\n",
+    "    \n",
+    "    # Remove the first seven rows\n",
+    "    df = df.iloc[7:]\n",
+    "    \n",
+    "    # Remove the empty rows\n",
+    "    df = df.dropna(how= 'all')  \n",
+    "    \n",
+    "    # Reshape and transpose\n",
+    "    reshaped = df.values.reshape(-1, 3, df.shape[1])  # Reshape into groups of 3 rows\n",
+    "    transposed = [pd.DataFrame(block).T for block in reshaped]  # Transpose each block\n",
+    "\n",
+    "    # Combine the transposed blocks into a single DataFrame\n",
+    "    result = pd.concat(transposed, ignore_index=True)\n",
+    "    \n",
+    "    # Expand the last column into multiple columns\n",
+    "    result_split = result[2].str.split(expand= True, n= 4)\n",
+    "    \n",
+    "    # Rename the new columns\n",
+    "    result_split.columns = [f'Col{i+1}' for i in range(result_split.shape[1])]\n",
+    "\n",
+    "    # Concatenate with the original DataFrame (excluding the old column)\n",
+    "    result = result.drop(columns=[2]).join(result_split)\n",
+    "    \n",
+    "    # Extract text inside parentheses\n",
+    "    result[1] = result[1].str.extract(r'\\((.*?)\\)')\n",
+    "    \n",
+    "    # Replace - with 0 in the dataframe\n",
+    "    result = result.replace('-', '0')\n",
+    "    \n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "# Call the function\n",
+    "park_factors = get_park_factors()\n",
+    "\n",
+    "# Export the table\n",
+    "output_folder_teams = ('D:\\\\mlb_analyzer\\\\output\\\\teams\\\\')\n",
+    "\n",
+    "# Save the dataFrame in the 'output' folder\n",
+    "park_factors.to_csv(os.path.join(output_folder_teams, 'park_factors.csv'), index=False)"
    ]
   }
  ],
