--- a/Code/projects/mlb_analyzer/sandbox/teams.ipynb
+++ b/Code/projects/mlb_analyzer/sandbox/teams.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "05e133bb",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "2251f7f3",
    "metadata": {},
    "outputs": [
@@ -39,19 +39,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing data for date: 2025-05-26\n",
+      "Processing data for date: 2025-06-12\n",
       "grid-noGutter mb-15 table loaded successfully.\n",
-      "Processing data for date: 2025-05-25\n",
+      "Processing data for date: 2025-06-11\n",
       "grid-noGutter mb-15 table loaded successfully.\n",
-      "Processing data for date: 2025-05-24\n",
+      "Processing data for date: 2025-06-10\n",
       "grid-noGutter mb-15 table loaded successfully.\n",
-      "Processing data for date: 2025-05-23\n",
+      "Processing data for date: 2025-06-09\n",
       "grid-noGutter mb-15 table loaded successfully.\n",
-      "Processing data for date: 2025-05-22\n",
+      "Processing data for date: 2025-06-08\n",
       "grid-noGutter mb-15 table loaded successfully.\n",
-      "Processing data for date: 2025-05-21\n",
+      "Processing data for date: 2025-06-07\n",
       "grid-noGutter mb-15 table loaded successfully.\n",
-      "Processing data for date: 2025-05-20\n",
+      "Processing data for date: 2025-06-06\n",
       "grid-noGutter mb-15 table loaded successfully.\n"
      ]
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "7d0f6e0c",
    "metadata": {},
    "outputs": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "24fc4f7d",
    "metadata": {},
    "outputs": [
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "c84020fe",
    "metadata": {},
    "outputs": [],
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "c16c8937",
    "metadata": {},
    "outputs": [],
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "89195ce8",
    "metadata": {},
    "outputs": [],
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "536985b3",
    "metadata": {},
    "outputs": [],
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "76b1deac",
    "metadata": {},
    "outputs": [
@@ -981,30 +981,7 @@
       "pitching data successfully retrieved for team 108\n",
       "pitching data successfully retrieved for team 117\n",
       "pitching data successfully retrieved for team 133\n",
-      "Skipping team 141 due to error: Message: \n",
-      "Stacktrace:\n",
-      "\tGetHandleVerifier [0x00007FF6A853CF45+75717]\n",
-      "\tGetHandleVerifier [0x00007FF6A853CFA0+75808]\n",
-      "\t(No symbol) [0x00007FF6A8308F9A]\n",
-      "\t(No symbol) [0x00007FF6A835F4C6]\n",
-      "\t(No symbol) [0x00007FF6A835F77C]\n",
-      "\t(No symbol) [0x00007FF6A83B2577]\n",
-      "\t(No symbol) [0x00007FF6A83873BF]\n",
-      "\t(No symbol) [0x00007FF6A83AF39C]\n",
-      "\t(No symbol) [0x00007FF6A8387153]\n",
-      "\t(No symbol) [0x00007FF6A8350421]\n",
-      "\t(No symbol) [0x00007FF6A83511B3]\n",
-      "\tGetHandleVerifier [0x00007FF6A883D71D+3223453]\n",
-      "\tGetHandleVerifier [0x00007FF6A8837CC2+3200322]\n",
-      "\tGetHandleVerifier [0x00007FF6A8855AF3+3322739]\n",
-      "\tGetHandleVerifier [0x00007FF6A8556A1A+180890]\n",
-      "\tGetHandleVerifier [0x00007FF6A855E11F+211359]\n",
-      "\tGetHandleVerifier [0x00007FF6A8545294+109332]\n",
-      "\tGetHandleVerifier [0x00007FF6A8545442+109762]\n",
-      "\tGetHandleVerifier [0x00007FF6A852BA59+4825]\n",
-      "\tBaseThreadInitThunk [0x00007FFCE0127374+20]\n",
-      "\tRtlUserThreadStart [0x00007FFCE0A1CC91+33]\n",
-      "\n",
+      "pitching data successfully retrieved for team 141\n",
       "pitching data successfully retrieved for team 144\n",
       "pitching data successfully retrieved for team 158\n",
       "pitching data successfully retrieved for team 138\n",
@@ -1114,30 +1091,7 @@
       "hitting gamelogs successfully retrieved for team 136\n",
       "hitting gamelogs successfully retrieved for team 146\n",
       "hitting gamelogs successfully retrieved for team 121\n",
-      "Skipping team 120 due to error: Message: \n",
-      "Stacktrace:\n",
-      "\tGetHandleVerifier [0x00007FF6A853CF45+75717]\n",
-      "\tGetHandleVerifier [0x00007FF6A853CFA0+75808]\n",
-      "\t(No symbol) [0x00007FF6A8308F9A]\n",
-      "\t(No symbol) [0x00007FF6A835F4C6]\n",
-      "\t(No symbol) [0x00007FF6A835F77C]\n",
-      "\t(No symbol) [0x00007FF6A83B2577]\n",
-      "\t(No symbol) [0x00007FF6A83873BF]\n",
-      "\t(No symbol) [0x00007FF6A83AF39C]\n",
-      "\t(No symbol) [0x00007FF6A8387153]\n",
-      "\t(No symbol) [0x00007FF6A8350421]\n",
-      "\t(No symbol) [0x00007FF6A83511B3]\n",
-      "\tGetHandleVerifier [0x00007FF6A883D71D+3223453]\n",
-      "\tGetHandleVerifier [0x00007FF6A8837CC2+3200322]\n",
-      "\tGetHandleVerifier [0x00007FF6A8855AF3+3322739]\n",
-      "\tGetHandleVerifier [0x00007FF6A8556A1A+180890]\n",
-      "\tGetHandleVerifier [0x00007FF6A855E11F+211359]\n",
-      "\tGetHandleVerifier [0x00007FF6A8545294+109332]\n",
-      "\tGetHandleVerifier [0x00007FF6A8545442+109762]\n",
-      "\tGetHandleVerifier [0x00007FF6A852BA59+4825]\n",
-      "\tBaseThreadInitThunk [0x00007FFCE0127374+20]\n",
-      "\tRtlUserThreadStart [0x00007FFCE0A1CC91+33]\n",
-      "\n",
+      "hitting gamelogs successfully retrieved for team 120\n",
       "hitting gamelogs successfully retrieved for team 110\n",
       "hitting gamelogs successfully retrieved for team 135\n",
       "hitting gamelogs successfully retrieved for team 143\n",
@@ -1227,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "c37ce2ce",
    "metadata": {},
    "outputs": [],
@@ -1442,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "c50a2fa6",
    "metadata": {},
    "outputs": [],
@@ -1514,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "a001f3e9",
    "metadata": {},
    "outputs": [],
@@ -1681,7 +1635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "eba80d8a",
    "metadata": {},
    "outputs": [
@@ -2004,7 +1958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "5f1798cc",
    "metadata": {},
    "outputs": [
@@ -2112,7 +2066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "a609862b",
    "metadata": {},
    "outputs": [
@@ -2175,7 +2129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "92015a09",
    "metadata": {},
    "outputs": [
@@ -2183,7 +2137,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\adtpi\\AppData\\Local\\Temp\\ipykernel_34496\\4234402237.py:55: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\adtpi\\AppData\\Local\\Temp\\ipykernel_41472\\4234402237.py:55: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  .fillna(status_parsed['Expected_Return_Date_2'].infer_objects(copy=False)) \\\n"
      ]
     }
@@ -2279,7 +2233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "id": "750bd99b",
    "metadata": {},
    "outputs": [
